--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
 
 # testing
 /coverage
@@ -13,7 +14,6 @@
 
 # misc
 .DS_Store
-.env
 .env.local
 .env.development.local
 .env.test.local
@@ -24,5 +24,10 @@ yarn-debug.log*
 yarn-error.log*
 
 /.idea
-
 .idea
+.env
+
+.eslintcache
+
+# Local Netlify folder
+.netlify
