--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.8",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.11.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
